@@ -1,6 +1,6 @@
 % File src/library/base/man/Control.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2019 R Core Team
+% Copyright 1995-2022 R Core Team
 % Distributed under GPL 2 or later
 
 \name{Control}
@@ -34,8 +34,8 @@ next
     Conditions of length greater than one are currently accepted with a
     warning, but only the first element is used.  An error is signalled
     instead when the environment variable \env{_R_CHECK_LENGTH_1_CONDITION_}
-    is set to true.  Other types are coerced to logical
-    if possible, ignoring any class.
+    is set to true (and will become the default in \R 4.3.0).  Other types
+    are coerced to logical if possible, ignoring any class.
   }
   \item{var}{A syntactical name for a variable.}
   \item{seq}{An expression evaluating to a vector (including a list and
